# cpp-scaffolder

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: design.md  getting_started.md
examples/: CODE_OF_CONDUCT  CONTRIBUTING  README.md  vcpkg.json
include/scaffolder/: cli.hpp  generator.hpp
scripts/: build.bat  build.sh  install.ps1  install.sh  package.bat  package.sh  test_release.sh  update.ps1  update.sh
scripts/helper/: check_deps.sh  cleanup.sh
src/: cli.cpp  generator.cpp  main.cpp
tests/: CMakeLists.txt  test_cli.cpp
